<resources>
    <string name="app_name">StudyGroup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Groups</string>
    <string name="tab_text_2">Courses</string>
    <string name="action_settings">Settings</string>
    <string name="Subject">Subject:</string>
    <string name="Location">Meeting Location:</string>
    <string name="Date">Date:</string>
    <string name="Time">Time:</string>
    <string name="DateAndTime">YYYY/MM/DD HH:MM</string>
    <string name="CreateGroup">Create Group</string>
    <string name="subjectError">Please enter subject!</string>
    <string name="Continue">Continue</string>
    <string name="participantsError">Please select number of participants</string>
    <string name="dayError">Please select day</string>
    <string name="monthError">Please select month</string>
    <string name="yearError">Please select year</string>
    <string name="dateError">Please pick a date</string>
    <string name="timeError">Please pick time</string>
    <string name="AreYouSureChanges">Are you sure you wanna save the changes?</string>
    <string name="locationError">Please enter location!</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="leave_group">Leave Group</string>
    <string name="request_to_join">Join Request</string>
    <string name="irrelevant_date">Sorry, this date has already passed, please enter a new one!</string>
    <string name="irrelevant_time">Sorry, that time has already passed, please enter a new one!</string>
    <string name="favorite">favorite</string>
    <string name="JoinGroup">Join Group!</string>
    <string name="DeleteGroup">Delete Group!</string>
    <string name="Requests">Requests</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="Remove">Remove</string>
    <string name="Name">Name</string>
    <string name="numOfParticipants" id="numOfParticipants ">Number Of Participants</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="log_out">Log out</string>
    <string name="credits">Credits</string>
    <string name="Send">Send</string>
    <string name="RequestMessage"> has sent a join request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">248931792334356</string>
    <string name="fb_login_protocol_scheme">fb248931792334356</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="group_picture">Group Picture</string>
    <string name="no_active_groups">There are no active groups at this course!</string>
    <string name="request_to_join_group">Join Request</string>
    <string name="group_of_interest">Interested</string>
    <string name="uninterested">Uninterested</string>
    <string name="admin">Admin</string>
    <string name="joined">Joined</string>
    <string name="requested">requested</string>
    <string name="search_title">group subject</string>
    <string name="cancel_join_request">cancel request</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="AreYouSure">Are you sure you want to delete the group?</string>
    <string name="AreYouSureToDeltePaticipant">Are you sure you want to remove </string>
    <string name="leaving_the_group">Are you sure you want to leave the group?</string>
    <string name="only_member_delete_group">You are the only group member. Do you wish to delete the group?</string>
    <string name="already_joined">You are already accepted to the group!</string>
    <string name="Interested">Interested</string>
    <string name="request_declined">Request declined!</string>
    <string name="request_accepted">Request accepted!</string>
    <string name="request_group_full">Group is already full! Consider editing the group details</string>
    <string name="enter_message">Enter your message</string>
    <string name="leave">Leave</string>
    <string name="save_changes">save changes</string>
    <string name="camera_credit">Camera Icon made by https://www.flaticon.com/authors/daniel-bruce from www.flaticon.com</string>

    <string name="notification_join_title">StudyGroup - Join request</string>
    <string name="notification_wish_to_join"> is wish to join </string>
    <string name="credits_to">Credits to:</string>
    <string name="free_pik">http://www.freepik.com</string>

    <string name="edit_group_details">Edit group details</string>
    <string name="group_details">Group details</string>
    <string name="delete_group">Delete group</string>
    <string name="pass_admin">Pass administraship</string>
    <string name="make_poll">Make a poll</string>
    <string name="leave_the_group">Leave group</string>
    <string name="pick_the_time">Pick time:</string>
    <string name="pick_the_date">Pick date:</string>
    <string name="click_choose_time">Pick time</string>
    <string name="click_choose_date">Pick date</string>
    <string name="loading">Loading ..</string>
    <string name="searching_for_connection">Searching for connection..</string>
    <string name="bad_connection">No internet connection found, your changes might not be saved!</string>

    <!-- RTL support -->
    <string name="delete_group_rtl">Delete group\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="pass_admin_rtl">Pass administraship\u0020\u0020\u0020\u0020\u0020</string>
    <string name="make_poll_rtl">Make a poll\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="leave_the_group_rtl">Leave group\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="edit_group_details_rtl">Edit group details\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="group_details_rtl">Group details\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="log_out_rtl">Log out\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="credits_rtl">Credits\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="action_settings_rtl">Settings\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="join_request_string">has requested to join the group!</string>
    <string name="optional">*Optional</string>
    <string name="nova_credits">https://www.webalys.com/nova</string>
    <string name="group_image">Group image</string>
    <string name="choose_group_image">Choose Group Image</string>
    <string name="no_interested_groups">There are no interested groups!</string>
    <string name="no_requests">There are no requests</string>
    <string name="not_joined_yet">You haven\'t joined any groups yet!</string>
    <string name="shir_cohen">Shir Cohen for helping with the design</string>

</resources>
