<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="study.group.Groups.Participant.GroupDetails">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/subjectGroupDetail"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/Subject"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/subjectIcon"
            app:layout_constraintTop_toBottomOf="@+id/imageLayout" />

        <TextView
            android:id="@+id/locationGroupDetail"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/Location"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/locationIcon"
            app:layout_constraintTop_toBottomOf="@+id/subjectGroupDetail" />

        <TextView
            android:id="@+id/NumOfParticipantsGroupDetail"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/numberOfParticipantsIcon"
            app:layout_constraintTop_toBottomOf="@+id/dateGroupDetail" />

        <TextView
            android:id="@+id/dateGroupDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:hint="@string/click_choose_date"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/dateAndTimeIcon"
            app:layout_constraintTop_toBottomOf="@+id/locationGroupDetail" />

        <TextView
            android:id="@+id/timeGroupDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:hint="@string/click_choose_time"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.717"
            app:layout_constraintStart_toEndOf="@+id/dateGroupDetail"
            app:layout_constraintTop_toBottomOf="@+id/locationGroupDetail" />

        <View
            android:id="@+id/subjectIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_share_megaphone_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLayout" />

        <View
            android:id="@+id/locationIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_location_pin_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectIcon" />

        <View
            android:id="@+id/dateAndTimeIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_calendar_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon" />

        <View
            android:id="@+id/numberOfParticipantsIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_user_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateAndTimeIcon" />

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_background">

            <ImageView
                android:id="@+id/imageGroupDetail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/group_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/studygroup1" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPaticipantsGroupDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfPartGroupDetail" />

        <TextView
            android:id="@+id/numberOfPartGroupDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleLayout" />

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@color/chat_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NumOfParticipantsGroupDetail">


        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>